--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,50 @@ header{
     background-color:  rgb(140, 140, 230);
     color: white;
 }
+
+/* Tentang Kami */
+.tentang-kami{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    background: url('/image/bg-about.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+}
+
+.tentang-kami img {
+    height: 500px;
+    width: auto;
+}
+
+.tentang-kami article{
+    padding-left: 50px;
+    width: 25%;
+}
+
+.tentang-kami h1{
+    font-size: 34px;
+}
+
+.tentang-kami p{
+    font-size: 20px;
+    color: #646464;
+    margin-top: 8px;
+    font-weight: 500;
+}
+
+.tentang-kami span{
+    font-weight: 700;
+    text-transform: uppercase;
+    color: blue;
+}
+
+/* Footer */
+footer{
+    border-top: 1px solid #f5f5f5;
+    padding: 15px 0px;
+    display: flex;
+    justify-content: center;
+}
